partial billboard code.
Gfx tweaks...

--- a/kisak-thug/kisak-thug/kisak-thug.vcxproj
+++ b/kisak-thug/kisak-thug/kisak-thug.vcxproj
@@ -1076,7 +1076,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
