enable hot-reload.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,17 @@ set(MSVC_WARNING_DISABLES
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /O2 /MP /W3 ${MSVC_WARNING_DISABLES} /permissive")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Od /MP /W3 ${MSVC_WARNING_DISABLES} /permissive")
 
+if (MSVC AND WIN32 AND NOT MSVC_VERSION VERSION_LESS 142)
+   target_link_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/INCREMENTAL>)
+   target_compile_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/ZI>)
+   
+   SET(CMAKE_CXX_FLAGS_DEBUG      "${CMAKE_CXX_FLAGS_DEBUG} /D \"SAFESEH:NO\"")
+	SET(CMAKE_EXE_LINKER_FLAGS_DEBUG    "${CMAKE_EXE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+	SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+	SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "${CMAKE_MODULE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+endif()
+
+
 set_property(TARGET KisakThug PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 target_link_libraries(KisakThug PUBLIC dinput8.lib dsound.lib dxguid.lib d3dx9d.lib XInput.lib d3d9.lib SDL2.lib Winmm.lib Shlwapi.lib)
