Refactor sMesh::Initialize() area.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ target_compile_definitions(KisakThug PUBLIC _CRT_SECURE_NO_WARNINGS)
 target_compile_definitions(KisakThug PUBLIC _WINSOCK_NO_DEPRECATED_NO_WARNINGS)
 target_compile_definitions(KisakThug PUBLIC GSI_NO_THREADS)
 target_compile_definitions(KisakThug PUBLIC KISAK_ORIGINAL_ALLOCATOR)
+#target_compile_definitions(KisakThug PUBLIC KISAK_NO_PRE)
 
 target_include_directories(KisakThug PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Code")
 target_include_directories(KisakThug PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Code/Sk")
@@ -34,13 +35,13 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /O2 /MP /W3 ${MSVC_W
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Od /MP /W3 ${MSVC_WARNING_DISABLES} /permissive")
 
 if (MSVC AND WIN32 AND NOT MSVC_VERSION VERSION_LESS 142)
-   target_link_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/INCREMENTAL>)
-   target_compile_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/ZI>)
+    target_link_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/INCREMENTAL>)
+    target_compile_options(KisakThug PRIVATE $<$<CONFIG:Debug>:/ZI>)
    
-   SET(CMAKE_CXX_FLAGS_DEBUG      "${CMAKE_CXX_FLAGS_DEBUG} /D \"SAFESEH:NO\"")
-	SET(CMAKE_EXE_LINKER_FLAGS_DEBUG    "${CMAKE_EXE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
-	SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
-	SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "${CMAKE_MODULE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+	set(CMAKE_CXX_FLAGS_DEBUG      "${CMAKE_CXX_FLAGS_DEBUG} /SAFESEH:NO")
+	set(CMAKE_EXE_LINKER_FLAGS_DEBUG    "${CMAKE_EXE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+	set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
+	set(CMAKE_MODULE_LINKER_FLAGS_DEBUG "${CMAKE_MODULE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
 endif()
 
 
