--- a/xbox/x_exe/x_exe.vcproj
+++ b/xbox/x_exe/x_exe.vcproj
@@ -21,7 +21,7 @@
 				Optimization="0"
 				OptimizeForProcessor="2"
 				AdditionalIncludeDirectories="..\..\Code;..\..\Code\Core;..\..\Code\Sk"
-				PreprocessorDefinitions="_DEBUG;WIN32;_XBOX;__PLAT_XBOX__"
+				PreprocessorDefinitions="_DEBUG;WIN32;_XBOX;__PLAT_XBOX__;KISAK_ORIGINAL_ALLOCATOR"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
